src/test/ui/parser/keyword-typeof.stderr
error: expected pattern, found reserved keyword `typeof`
  --> $DIR/keyword-typeof.rs:2:9
   |
LL |     let typeof = ();
   |         ^^^^^^ expected pattern

error: aborting due to previous error

